Fix separator misalignment when left panel collapsed

--- a/components/src/core/components/TableSidebar/table-left-panel.scss
+++ b/components/src/core/components/TableSidebar/table-left-panel.scss
@@ -93,7 +93,12 @@
   &.no-label {
     min-width: initial;
     ::v-deep(.oxd-button-label-wrapper) {
-      display: none;
+      visibility: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      width: 0;
     }
   }
 }
